fix:layout problems

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,5 +1,6 @@
 .form {
     font-family: monospace;
+    width: 100%;
 }
 .form__title {
     color: #9351b4;
